# GNU-MSM

./: CMakeLists.txt  README
src/: CMakeLists.txt  avif_loader.cpp  main.cpp
src/game/src/: GameMain.cpp
src/game/src/grid/: Grid.cpp  GridObject.cpp
src/social/src/auth/: Auth2.cpp
src/sys/src/: Engine.cpp  EngineSDL.cpp  EngineSDL_clr.cpp  LoaderAVIF.cpp  LoaderPNG.cpp  PugiXmlHelper.cpp  PugiXmlHelper.h  Singleton.h
src/sys/src/res/: ResourceXml.cpp
